# hindsight-zoidmatter

./: FINDINGS.md  package-lock.json
.github/workflows/: test.yml
crates/hindsight-api/: Cargo.toml
crates/hindsight-api/src/: lib.rs  main.rs  server.rs
crates/hindsight-api/src/routes/: invariants.rs
crates/hindsight-api/tests/: invariant_crud.rs
crates/hindsight-core/: Cargo.toml
crates/hindsight-core/src/: bank.rs  lib.rs  memory_type.rs
crates/hindsight-missions/: Cargo.toml
crates/hindsight-missions/src/: error.rs  fact_store.rs  lib.rs  registry.rs  retain_invariant.rs  traits.rs
crates/hindsight-missions/tests/: retain_invariant_unit.rs  retain_recall_cycle.rs
crates/hindsight-recall/: Cargo.toml
crates/hindsight-recall/benches/: longmemeval.rs
crates/hindsight-recall/src/: conflict.rs  lib.rs  mitm.rs  priority.rs  recall.rs
crates/hindsight-recall/tests/: invariant_pre_check.rs  priority_stack.rs  resolver_spans.rs
hindsight-agent/: DEMO.md  pyproject.toml
hindsight-agent/hindsight_agent/: api.py  cli.py  config.py
hindsight-agent/hindsight_agent/commands/: documents.py  pages.py  recall.py  retain.py  setup.py
hindsight-agent/plugin/openclaw/: openclaw.plugin.json  package-lock.json  package.json
hindsight-agent/plugin/openclaw/src/: index.ts
hindsight-agent/skill/: SKILL.md
hindsight-android-sdk/app/: build.gradle.kts
hindsight-api-slim/: pyproject.toml
hindsight-api-slim/hindsight_api/: config.py
hindsight-api-slim/hindsight_api/alembic/versions/: e9b2c7d1f3a4_drop_entity_memory_links.py  n9i0j1k2l3m4_learnings_and_pinned_reflections.py
hindsight-api-slim/hindsight_api/api/: http.py
hindsight-api-slim/hindsight_api/engine/: memory_engine.py
hindsight-api-slim/hindsight_api/engine/consolidation/: consolidator.py  prompts.py
hindsight-api-slim/hindsight_api/engine/db/: ops.py  ops_oracle.py  ops_postgresql.py  oracle.py
hindsight-api-slim/hindsight_api/worker/: poller.py
hindsight-api-slim/tests/: test_consolidation.py  test_consolidation_prompt_brace_escape.py  test_consolidation_retry_budget.py  test_graph_entity_fanout_cap.py  test_graph_maintenance.py  test_http_api_integration.py  test_knowledge_base.py  test_oracle_http_integration.py  test_oracle_integration.py  test_quality_integration.py  test_retain.py  test_worker.py
hindsight-cli/src/: api.rs
hindsight-clients/python/: hindsight_client_api_README.md
hindsight-control-plane/: tsconfig.json
hindsight-control-plane/src/components/: mental-models-view.tsx
hindsight-control-plane/src/lib/: api.ts
hindsight-dev/hindsight_dev/: generate_changelog.py
hindsight-dev/pretext-poc/: index.html
hindsight-docs/blog/: 2026-04-24-openai-perplexity-mcp-memory.md  2026-05-05-claude-code-subagents-shared-memory.md  2026-05-06-tap-health-diabetic-ai-nurse-customer-story.md  2026-05-07-n8n-persistent-memory.md  2026-05-14-onboarding-new-engineer-opencode-memory.md  2026-05-15-hindsight-cloud-goes-global.md  2026-05-28-hindsight-15k-stars.md  authors.yml
hindsight-docs/docs/developer/: models.mdx
hindsight-docs/src/data/: integrations.json
hindsight-docs/static/: bank-template-schema.json
hindsight-integrations/claude-code/scripts/: mcp_server.py
hindsight-integrations/dify/: README.md  build_package.sh
hindsight-integrations/dify/provider/: hindsight.py
hindsight-integrations/dify/tools/: recall.py  reflect.py  retain.py
hindsight-integrations/gemini-spark/: README.md  manifest.example.yaml  mcp_config.example.json
hindsight-integrations/gemini-spark/tests/: test_config_examples.py
hindsight-integrations/litellm/: pyproject.toml
hindsight-integrations/litellm/hindsight_litellm/: __init__.py  _async.py  config.py  wrappers.py
hindsight-integrations/litellm/tests/: test_e2e.py  test_integration.py
hindsight-integrations/openai-agents/hindsight_openai_agents/: __init__.py  _client.py  tools.py
hindsight-integrations/openai-agents/tests/: test_tools.py
hindsight-integrations/paperclip/src/: worker.ts
hindsight-integrations/paperclip/tests/: plugin.spec.ts
hindsight-integrations/vapi/examples/: interactive_webhook.py
hindsight-tools/hindsight-agent-sdk/: package.json
hindsight-tools/hindsight-agent-sdk/src/: index.test.ts
hindsight-tools/self-driving-agents/: package.json
hindsight-tools/self-driving-agents/src/: cli.test.ts  cli.ts
scripts/: release-integration.sh
scripts/android/: build-wheels.sh  compile-pg.sh  install-python-deps.sh
skills/agent-knowledge/: SKILL.md
skills/agent-memory/: SKILL.md
(+13 files in other folders)
