[package]
name = "hindsight-api"
version = "0.1.0"
edition = "2021"
authors = ["Zoidmatter Team"]
description = "Programmatic API and CLI for ZoidMatter invariant CRUD"
license = "MIT"
repository = "https://github.com/anomalyco/ZoidMatter"

[lib]
name = "hindsight_api"
path = "src/lib.rs"

[[bin]]
name = "zoidmatter"
path = "src/main.rs"

[[bin]]
name = "zoidmatter-server"
path = "src/server.rs"

[dependencies]
hindsight-core = { path = "../hindsight-core" }
hindsight-missions = { path = "../hindsight-missions" }
hindsight-recall = { path = "../hindsight-recall" }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
