[package]
name = "hindsight-core"
version = "0.1.0"
edition = "2021"
authors = ["Zoidmatter Team"]
description = "Core data structures for Zoidmatter memory system extensions to Hindsight"
license = "MIT"
repository = "https://github.com/anomalyco/ZoidMatter"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
