[package]
name = "hindsight-recall"
version = "0.1.0"
edition = "2021"
authors = ["Zoidmatter Team"]
description = "Recall pipeline with invariant pre-check gate for the ZoidMatter memory system"
license = "MIT"
repository = "https://github.com/anomalyco/ZoidMatter"

[features]
mitm_resolver = ["dep:serde", "dep:serde_json"]

[dependencies]
hindsight-core = { path = "../hindsight-core" }
hindsight-missions = { path = "../hindsight-missions" }
tracing = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
chrono = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[[bench]]
name = "longmemeval"
harness = false
