[package]
name = "hindsight-recall"
version = "0.1.0"
edition = "2021"
authors = ["Zoidmatter Team"]
description = "Recall pipeline with invariant pre-check gate for the ZoidMatter memory system"
license = "MIT"
repository = "https://github.com/anomalyco/ZoidMatter"

[features]
mitm_resolver = []

[dependencies]
hindsight-core = { path = "../hindsight-core" }
hindsight-missions = { path = "../hindsight-missions" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[[bin]]
name = "longmemeval"
path = "benches/longmemeval.rs"

[[bench]]
name = "longmemeval"
harness = false
